--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mediporta",
   "version": "0.1.0",
+  "homepage": "https://bogdanskij.github.io/mediporta/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -30,6 +31,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "ci-install": "npm ci"
   },
   "eslintConfig": {
